--- a/src/i18n/locale/en.json
+++ b/src/i18n/locale/en.json
@@ -17,6 +17,8 @@
   "components.Discover.discover": "Discover",
   "components.Discover.discovermovies": "Popular Movies",
   "components.Discover.discovertv": "Popular Series",
+  "components.Discover.genreMovies": "{genre} Movies",
+  "components.Discover.genreSeries": "{genre} Series",
   "components.Discover.nopending": "No Pending Requests",
   "components.Discover.popularmovies": "Popular Movies",
   "components.Discover.populartv": "Popular Series",
